# packages/shared-types/src/index.ts
@@ -32,3 +32,9 @@ export type ValidationPlan = components['schemas']['ValidationPlan'];
 export type ValidationPlanCreate = components['schemas']['ValidationPlanCreate'];
 export type ValidationPlanReview = components['schemas']['ValidationPlanReview'];
 export type ValidationProbeStep = components['schemas']['ValidationProbeStep'];
+export type ValidationExecution = components['schemas']['ValidationExecution'];
+export type ValidationExecutionCreate = components['schemas']['ValidationExecutionCreate'];
+export type ValidationExecutionEvent = components['schemas']['ValidationExecutionEvent'];
+export type ValidationExecutionEvidence = components['schemas']['ValidationExecutionEvidence'];
+export type ValidationExecutionReview = components['schemas']['ValidationExecutionReview'];
+export type ValidationTemplate = components['schemas']['ValidationTemplate'];
